[gd_scene load_steps=22 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://actor/unit/King.gd" type="Script" id=2]
[ext_resource path="res://assets/tool_and_weapon/hammer1.png" type="Texture" id=3]
[ext_resource path="res://assets/character/king.png" type="Texture" id=4]
[ext_resource path="res://actor/unit/animation_and_effect/Blood_effect.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/character/king2.png" type="Texture" id=6]
[ext_resource path="res://assets/character/king4.png" type="Texture" id=7]
[ext_resource path="res://assets/character/king5.png" type="Texture" id=8]
[ext_resource path="res://assets/character/king6.png" type="Texture" id=9]
[ext_resource path="res://assets/character/king3.png" type="Texture" id=10]
[ext_resource path="res://assets/character/king1.png" type="Texture" id=11]
[ext_resource path="res://font_style/Amatic-Bold.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://assets/character/shadow.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "move",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 26.6264
height = 282.66

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 34.56 )

[sub_resource type="CircleShape2D" id=4]
radius = 48.0

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 12 )

[sub_resource type="Animation" id=6]
resource_name = "bleed"
length = 0.8

[sub_resource type="Animation" id=7]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("direction/Position2D:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 2.21914, 0.5, 1 ),
"update": 0,
"values": [ 0.0, 60.0, 0.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "bleeding"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("blood_effect:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="king" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( -1.13687e-13, 40 )
scale = Vector2( 0.446927, 0.307692 )
texture = ExtResource( 13 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1.37091e-06, -2.28474 )
scale = Vector2( 0.271186, 0.271186 )
texture = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 0.754717, 0.764585 )
frames = SubResource( 1 )
animation = "move"
frame = 1

[node name="direction" type="Node2D" parent="."]
scale = Vector2( 1.5, 1.5 )

[node name="buildArea" type="Area2D" parent="direction"]
scale = Vector2( 0.220463, 0.874717 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="direction/buildArea"]
position = Vector2( 0, -35 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="buildWallArea" type="Area2D" parent="direction"]
visible = false
position = Vector2( 0, -66 )
scale = Vector2( 3.07813, 0.5 )

[node name="wall_shadow" type="Sprite" parent="direction/buildWallArea"]
position = Vector2( 0, -0.401831 )
scale = Vector2( 0.992061, 1.03513 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="direction/buildWallArea"]
shape = SubResource( 3 )

[node name="Position2D" type="Position2D" parent="direction"]
position = Vector2( 21.3333, 10.6667 )

[node name="hammer" type="Sprite" parent="direction/Position2D"]
position = Vector2( 5.33333, -21.3333 )
rotation = 3.14159
scale = Vector2( 0.233, -0.233 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="Label" type="Label" parent="."]
margin_left = -80.0
margin_top = -136.0
margin_right = 80.0
margin_bottom = -33.0
custom_fonts/font = SubResource( 5 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildingTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="buildProgress" type="ProgressBar" parent="."]
visible = false
margin_left = -40.0
margin_top = 24.0
margin_right = 41.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="healthBar" type="ProgressBar" parent="."]
visible = false
margin_left = -56.0
margin_top = -72.0
margin_right = 56.0
margin_bottom = -56.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationBuilding" type="AnimationPlayer" parent="."]
anims/bleed = SubResource( 6 )
anims/build = SubResource( 7 )

[node name="AnimationBleeding" type="AnimationPlayer" parent="."]
anims/bleeding = SubResource( 8 )

[node name="blood_effect" parent="." instance=ExtResource( 5 )]

[connection signal="area_entered" from="direction/buildArea" to="." method="_on_minePoint_area_entered"]
[connection signal="area_exited" from="direction/buildArea" to="." method="_on_minePoint_area_exited"]
[connection signal="timeout" from="BuildingTimer" to="." method="_on_BuildingTimer_timeout"]
